--- a/Om mig.html
+++ b/Om mig.html
@@ -37,8 +37,10 @@
           <div class="text-center">
                <h2>Om mig</h2>
                <p>
-                <br>Jeg hedder Thomas Mose Holmber og jeg er 17 år. Jeg tager min uddannelse på Tec for at blive en dygtig datateknikker med speciale i programmering.
-                Ved siden af skole styrke træner jeg 5-6 gange om ugen, sammentidig med jeg også arbejder meget. Jeg er rigtig engageret i at arbejde, og ellers søger
+                <br>Jeg hedder Thomas Mose Holmber og jeg er 17 år. 
+                Jeg tager min uddannelse på Tec for at blive en dygtig datateknikker med speciale i programmering.
+                Ved siden af skole styrke træner jeg 5-6 gange om ugen, sammentidig med jeg også arbejder meget. 
+                Jeg er rigtig engageret i at arbejde, og ellers søger
                 eg en arbejdsplads med glade kollegare et godt humør
                </p>
           </div>
