--- a/cv.html
+++ b/cv.html
@@ -33,7 +33,7 @@
         </div>
       </nav>
 
-      <img src="billeder/CV.PNG" class="center" alt="Billed">
+      <img src="billeder/Udklip (2).PNG" class="center" alt="Billed">
 
 </body>
 
