Ud med det gamle, ind med det nye

--- a/cv.html
+++ b/cv.html
@@ -20,7 +20,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./cv.html">CV</a>
+                <a class="nav-link active" aria-current="page" href="./CV.html">CV</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./Om mig.html">Om mig</a>
@@ -32,9 +32,9 @@
           </div>
         </div>
       </nav>
-
-      <img src="billeder/Udklip (2).PNG" class="center" alt="Billed">
-
+    <div class="container p-5 my-5 text-center">
+      <img src="billeder/CV.PNG" class="center" alt="Billed">
+    </div>
 </body>
 
 </html>
