--- a/Thomas Hjemmeside.html
+++ b/Thomas Hjemmeside.html
@@ -20,7 +20,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./cv.html">CV</a>
+                <a class="nav-link active" aria-current="page" href="./CV.html">CV</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./Om mig.html">Om mig</a>
